<?xml version="1.0"?>
<package format="2">

  <name>f1tenth_iv</name>
  <version>0.1.0</version>
  <description>F1TENTH IEEE IV Symposium Competition</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="csamak@clemson.edu">Chinmay Samak</maintainer>
  <maintainer email="tsamak@clemson.edu">Tanmay Samak</maintainer>
  <maintainer email="ajoglek@clemson.edu">Ajinkya Joglekar</maintainer>
  <maintainer email="dhruvm@clemson.edu">Dhruv Mehta</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="csamak@clemson.edu">Chinmay Samak</author>
  <author email="tsamak@clemson.edu">Tanmay Samak</author>
  <author email="ajoglek@clemson.edu">Ajinkya Joglekar</author>
  <author email="dhruvm@clemson.edu">Dhruv Mehta</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

</package>
